Reworking native IO API