@@ -1,2 +1,2 @@
 cd src/main/java
-javac -h ../native/include/ -d ../../../target/classes org/reactivetoolbox/asyncio/NativeIO.java
+javac --enable-preview --release 14 -h ../native/include/ -d ../../../target/classes org/reactivetoolbox/asyncio/NativeIO.java
